fm-helloworld-svc/base/service.yaml
kind: Service
apiVersion: v1
# namespace: helloworld-app-svc
metadata:
  name: fm-helloworld-svc
spec:
  selector:
    deployment: hello
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8666
    targetPort: 8080
